# cc-fish

./: .gitignore  CMakeLists.txt  README.md  build.bat
java/: dllmain.cpp  dllmain_file.cpp
java/injector/: injector.cpp
java/java/: java.cpp  java.h  native_bridge.h
java/java/internal/: abstract_client_player.h  abstract_texture.h  active_render_info.h  axis_aligned_bb.h  block.h  block_pos.h  block_state.h  cosmic_client_handler.h  cosmic_client_set.h  cosmic_packet_handler.h  cosmic_ping.h  entity.h  entity_renderer.h  game_settings.h  gui_inventory.h  inventory_player.h  item.h  itemstack.h  mc_vector.h  minecraft.h  mouse_helper.h  moving_object_position.h  moving_object_type.h  native_bridge.h  nbt_tag_compound.h  player_controller_mp.h  potion_effect.h  render_manager.h  resource_location.h  texture_manager.h  texture_object.h  timer.h  uuid.h  world.h
java/java/internal/cache/: cached.h
java/java/internal/java_object/: java_object.h
java/java/mappings/: cosmic_client_mappings.h  native_bridge_mappings.h
java/java/redefined_classes/: abstract_client_player.h  cosmic_proxy.h  entity_player.h  entity_renderer.h  minecraft.h  net_handler_play_client.h  render_living_entity.h  world.h
java/libraries/xor/: xorstr.h
java/main/: hack.h
java/main/modules/: module_handler.h
java/main/modules/chams/: chams.h
java/main/modules/fishing/: fishing.h  fishing_simple.h
java/math/: matrix.h  vec.h
java/utils/: file_logging.h  logging.h
legacy/: fishing.cpp  fishing.h  module_handler.cpp  module_handler.h
